--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/tabulation.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/tabulation.html
@@ -84,7 +84,7 @@
             <tr>
                 <th data-checkbox="true" data-field="state"></th>
                 <th data-title="字段名" data-field="title" data-align="center"></th>
-                <th data-title="物理字段名" data-field="field_name" data-align="center"></th>
+                <th data-title="物理字段名" data-field="fieldName" data-align="center"></th>
                 <th data-title="是否必填" data-field="required" data-align="center"></th>
                 <th data-title="显示类型" data-field="show_type" data-align="center"></th>
                 <th data-title="字段类型" data-field="field_type" data-align="center"></th>
@@ -106,6 +106,6 @@
 <script th:src="@{/plugin/pnotify/pnotify.js}"></script>
 <script th:src="@{/plugin/pnotify/pnotify.buttons.js}"></script>
 <script th:src="@{/plugin/layer/layer.js}"></script>
-<script th:src="@{/js/system/formField/manage.js}"></script>
+<script th:src="@{/js/system/formField/tabulation.js}"></script>
 </body>
 </html>
