搞事情前保存一波

--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/tabulation.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/tabulation.html
@@ -61,12 +61,8 @@
                     </select>
                 </div>
                 <div class="search-group col-sm-4 col-md-3 col-lg-3">
-                    <label class="search-label">序号</label>
-                    <input id="searchSort" class="search-control" type="number"/>
-                </div>
-                <div class="search-group col-sm-4 col-md-3 col-lg-3">
-                    <label class="search-label">字段单位</label>
-                    <input id="searchUnit" class="search-control" type="text"/>
+                    <label class="search-label">默认值</label>
+                    <input id="searchDefaultValue" class="search-control" type="text"/>
                 </div>
             </div>
         </form>
@@ -84,14 +80,11 @@
             <tr>
                 <th data-checkbox="true" data-field="state"></th>
                 <th data-title="字段名" data-field="title" data-align="center"></th>
-                <th data-title="物理字段名" data-field="fieldName" data-align="center"></th>
+                <th data-title="物理字段名" data-field="field_name" data-align="center"></th>
                 <th data-title="是否必填" data-field="required" data-align="center"></th>
                 <th data-title="显示类型" data-field="show_type" data-align="center"></th>
                 <th data-title="字段类型" data-field="field_type" data-align="center"></th>
-                <th data-title="是否隐藏" data-field="hidden" data-align="center"></th>
-                <th data-title="排序" data-field="sort" data-align="center"></th>
-                <!--<th data-title="是否存入搜索引擎" data-field="saveToSearchEngine" data-align="center"></th>-->
-                <th data-title="字段单位" data-field="field_unit" data-align="center"></th>
+                <th data-title="默认值" data-field="default_value" data-align="center"></th>
             </tr>
             </thead>
         </table>
