--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/modify.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/modify.html
@@ -46,106 +46,108 @@
                     <form  role="form" id="newField" name="newField" th:object="${formField}" onkeydown="if(event.keyCode==13)return false;">
                         <div class="form-group form-group-sm">
                             <label>字段标题</label> <span style="color:#FF3333;font-size:18px">*</span>
-                            <input type="text" class="form-control" name="title" id="title" placeholder="请输入字段标题" th:value="*{title}"required>
+                            <input type="text" class="form-control" name="title" id="title" placeholder="请输入字段标题" th:value="${formField['title']}"required>
                         </div>
                         <div class="form-group form-group-sm">
                             <label>字段名称</label> <span style="color:#FF3333;font-size:18px">*</span>
-                            <input type="text" class="form-control" name="fieldName" id="fieldName" placeholder="请输入字段名称" th:value="*{fieldName}" required>
+                            <input type="text" class="form-control" name="fieldName" id="fieldName" placeholder="请输入字段名称" th:value="${formField['field_name']}" required>
                         </div>
-                        <div class="form-group form-group-sm">
-                            <label>展示类型</label>
-                            <select class="form-control" name="showType" id="showType" th:value="*{showType}">
-                                <option th:each="showType:${showTypes}" th:value="${showType.id}" th:text="${showType.title}" th:data-value="${showType.itemValue}" th:selected="(*{showType} == ${showType.id})"></option>
-                            </select>
-                        </div>
-                        <div class="form-group form-group-sm">
-                            <label>字段类型</label>
-                            <select class="form-control" name="fieldType" id="fieldType" th:value="*{fieldType}">
-                                <option th:each="fieldType:${fieldTypes}" th:value="${fieldType.id}" th:text="${fieldType.description}" th:selected="(*{fieldType} == ${fieldType.id})"></option>
-                            </select>
-                        </div>
-                        <div class="form-group form-group-sm">
-                            <label>关联选择项</label>
-                            <select class="form-control" name="targetId" id="targetId" th:value="*{targetId}">
-                                <option th:each="reference:${references}" th:value="${reference.id}" th:text="${reference.title}" th:selected="*{targetId} == ${reference.id}"></option>
-                            </select>
-                        </div>
-                        <div class="form-group form-group-sm" style="display: none;">
-                            <label>字段长度</label>
-                            <input type="number" class="form-control" name="length" id="length" placeholder="请输入字段长度" th:value="*{length}"/>
-                        </div>
+                        <!--<div class="form-group form-group-sm">-->
+                            <!--<label>展示类型</label>-->
+                            <!--<select class="form-control" name="showType" id="showType" th:value="*{showType}">-->
+                                <!--<option th:each="showType:${showTypes}" th:value="${showType.id}" th:text="${showType.title}" th:data-value="${showType.itemValue}" th:selected="(*{showType} == ${showType.id})"></option>-->
+                            <!--</select>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-group-sm">-->
+                            <!--<label>字段类型</label>-->
+                            <!--<select class="form-control" name="fieldType" id="fieldType" th:value="*{fieldType}">-->
+                                <!--<option th:each="fieldType:${fieldTypes}" th:value="${fieldType.id}" th:text="${fieldType.description}" th:selected="(*{fieldType} == ${fieldType.id})"></option>-->
+                            <!--</select>-->
+                        <!--</div>-->
+
+                        <!--<div class="form-group form-group-sm">-->
+                            <!--<label>关联选择项</label>-->
+                            <!--<select class="form-control" name="targetId" id="targetId" th:value="*{targetId}">-->
+                                <!--<option th:each="reference:${references}" th:value="${reference.id}" th:text="${reference.title}" th:selected="*{targetId} == ${reference.id}"></option>-->
+                            <!--</select>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-group-sm" style="display: none;">-->
+                            <!--<label>字段长度</label>-->
+                            <!--<input type="number" class="form-control" name="length" id="length" placeholder="请输入字段长度" th:value="*{length}"/>-->
+                        <!--</div>-->
+
                         <div class="form-group form-group-sm">
                             <label>默认值</label>
-                            <input type="text" class="form-control" name="defaultValue" id="defaultValue" placeholder="请输入字段名称" th:value="*{defaultValue}"/>
+                            <input type="text" class="form-control" name="defaultValue" id="defaultValue" placeholder="请输入字段名称" th:value="${formField['default_value']}"/>
                         </div>
-                        <div class="form-group form-group-sm">
+                        <!--<div class="form-group form-group-sm">
                             <label>单位</label>
                             <input type="text" class="form-control" name="fieldUnit" id="fieldUnit" placeholder="请输入单位名称" th:value="*{fieldUnit}"/>
                         </div>
                         <div class="form-group form-group-sm">
                             <label>附件个数</label>
                             <input type="text" class="form-control" name="attachNum" id="attachNum" placeholder="请输入附件个数" th:value="*{attachNum}"/>
-                        </div>
-                        <div class="form-group checkbox-group">
-                            <span class="checkbox-label"><span>是否存入搜索引擎:</span></span>
-                            <span class="checkbox-input">
-                            <span class="checkbox-inner"></span>
-                            <input type="checkbox" name="saveToSearchEngine" id="saveToSearchEngine" class="checkbox-original" th:checked="*{saveToSearchEngine}"/>
-                        </span>
-                        </div>
+                        </div>-->
+                        <!--<div class="form-group checkbox-group">-->
+                            <!--<span class="checkbox-label"><span>是否存入搜索引擎:</span></span>-->
+                            <!--<span class="checkbox-input">-->
+                            <!--<span class="checkbox-inner"></span>-->
+                            <!--<input type="checkbox" name="saveToSearchEngine" id="saveToSearchEngine" class="checkbox-original" th:checked="*{saveToSearchEngine}"/>-->
+                        <!--</span>-->
+                        <!--</div>-->
                         <div class="form-group checkbox-group">
                             <span class="checkbox-label"><span>是否必填:</span></span>
                             <span class="checkbox-input">
                             <span class="checkbox-inner"></span>
-                            <input type="checkbox" name="required" id="required" class="checkbox-original" th:checked="*{required}"/>
+                            <input type="checkbox" name="required" id="required" class="checkbox-original" th:checked="${formField['required']}"/>
                         </span>
                         </div>
-                        <div class="form-group checkbox-group">
-                            <span class="checkbox-label"><span>是否只读:</span></span>
-                            <span class="checkbox-input">
-                            <span class="checkbox-inner"></span>
-                            <input type="checkbox" name="readonly" id="readonly" class="checkbox-original" th:checked="*{readonly}"/>
-                        </span>
-                        </div>
-                        <div class="form-group checkbox-group">
-                            <span class="checkbox-label"><span>是否隐藏:</span></span>
-                            <span class="checkbox-input">
-                            <span class="checkbox-inner"></span>
-                            <input type="checkbox" name="hidden" id="hidden" class="checkbox-original" th:checked="*{hidden}"/>
-                        </span>
-                        </div>
-                        <div class="form-group form-group-sm">
-                            <label>输入组件</label>
-                            <select class="form-control" name="pageComponentInput" id="pageComponentInput" th:value="*{pageComponentInput}">
-                                <option th:each="item:${inputComponent}" th:value="${item.id}" th:text="${item.title}" th:selected="(*{pageComponentInput} == ${item.id})"></option>
-                            </select>
-                        </div>
-                        <div class="form-group form-group-sm">
-                            <label>输出组件</label>
-                            <select class="form-control" name="pageComponentOutput" id="pageComponentOutput" th:value="*{pageComponentOutput}">
-                                <option th:each="item:${outputComponent}" th:value="${item.id}" th:text="${item.title}" th:selected="(*{pageComponentOutput} == ${item.id})"></option>
-                            </select>
-                        </div>
-                        <div class="form-group form-group-sm">
-                            <label>排序</label>
-                            <input type="number" class="form-control" name="sort" id="sort" th:value="*{sort}"/>
-                        </div>
-                        <div class="form-group form-group-sm">
-                            <label>JS脚本 (按F10全屏)</label>
-                            <textarea id="code" rows="5" class="form-control" name="jsHandle" th:text="*{jsHandle}"></textarea>
-                        </div>
+                        <!--<div class="form-group checkbox-group">-->
+                            <!--<span class="checkbox-label"><span>是否只读:</span></span>-->
+                            <!--<span class="checkbox-input">-->
+                            <!--<span class="checkbox-inner"></span>-->
+                            <!--<input type="checkbox" name="readonly" id="readonly" class="checkbox-original" th:checked="*{readonly}"/>-->
+                        <!--</span>-->
+                        <!--</div>-->
+                        <!--<div class="form-group checkbox-group">-->
+                            <!--<span class="checkbox-label"><span>是否隐藏:</span></span>-->
+                            <!--<span class="checkbox-input">-->
+                            <!--<span class="checkbox-inner"></span>-->
+                            <!--<input type="checkbox" name="hidden" id="hidden" class="checkbox-original" th:checked="*{hidden}"/>-->
+                        <!--</span>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-group-sm">-->
+                            <!--<label>输入组件</label>-->
+                            <!--<select class="form-control" name="pageComponentInput" id="pageComponentInput" th:value="*{pageComponentInput}">-->
+                                <!--<option th:each="item:${inputComponent}" th:value="${item.id}" th:text="${item.title}" th:selected="(*{pageComponentInput} == ${item.id})"></option>-->
+                            <!--</select>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-group-sm">-->
+                            <!--<label>输出组件</label>-->
+                            <!--<select class="form-control" name="pageComponentOutput" id="pageComponentOutput" th:value="*{pageComponentOutput}">-->
+                                <!--<option th:each="item:${outputComponent}" th:value="${item.id}" th:text="${item.title}" th:selected="(*{pageComponentOutput} == ${item.id})"></option>-->
+                            <!--</select>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-group-sm">-->
+                            <!--<label>排序</label>-->
+                            <!--<input type="number" class="form-control" name="sort" id="sort" th:value="*{sort}"/>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-group-sm">-->
+                            <!--<label>JS脚本 (按F10全屏)</label>-->
+                            <!--<textarea id="code" rows="5" class="form-control" name="jsHandle" th:text="*{jsHandle}"></textarea>-->
+                        <!--</div>-->
                         <div class="form-group form-group-sm">
                             <label>备注</label>
-                            <textarea rows="4" class="form-control" name="description" id="description" placeholder="请输入备注" th:text="*{description}"></textarea>
+                            <textarea rows="4" class="form-control" name="description" id="description" placeholder="请输入备注" th:text="${formField['description']}"></textarea>
                         </div>
-                        <div class="form-group form-group-sm">
-                            <label>KEY</label>
-                            <input type="text" class="form-control" disabled="true" name="id" id="id" th:value="*{id}"/>
-                        </div>
-                        <div class="form-group form-group-sm">
-                            <label>UUID</label>
-                            <input type="text" class="form-control" disabled="true" name="uuid" id="uuid" th:value="*{uuid}"/>
-                        </div>
+                        <!--<div class="form-group form-group-sm">-->
+                            <!--<label>KEY</label>-->
+                            <!--<input type="text" class="form-control" disabled="true" name="id" id="id" th:value="*{id}"/>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-group-sm">-->
+                            <!--<label>UUID</label>-->
+                            <!--<input type="text" class="form-control" disabled="true" name="uuid" id="uuid" th:value="*{uuid}"/>-->
+                        <!--</div>-->
                     </form>
                 </div>
             </div>
