--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/tabulation.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/tabulation.html
@@ -62,7 +62,7 @@
     </div>
     <div id="data-part" class="clearfix">
         <div id="toolbar" class="btn-toolbar">
-            <button type="button" th:each="button:${buttons}" th:onClick="${button['jsContent']}" th:class="${button['className']}">
+            <button type="button" th:each="button:${buttons}" th:onClick="${button['script']}" th:class="${button['className']}">
                 <i th:class="${button['icon']}"></i> <span th:text="${button['title']}"></span>
             </button>
             <button id="search" type="button" class="btn btn-success btn-sm" style="display: none"><i class="icon-search"></i> <span>搜索</span></button>
