--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/modify.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/formField/modify.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div id="main">
-        <input type="hidden" th:value="${formFieldFormId}" id="formId"/>
+        <input type="hidden" th:value="${formId}" id="formId"/>
         <input type="hidden" th:value="${formField['id']}" id="formFieldId"/>
         <div class="main-content">
             <div style="margin-bottom:10px;">
@@ -52,6 +52,22 @@
                             <label>字段名称</label> <span style="color:#FF3333;font-size:18px">*</span>
                             <input type="text" class="form-control" name="fieldName" id="fieldName" placeholder="请输入字段名称" th:value="${formField['field_name']}" required>
                         </div>
+
+                        <div class="form-group form-group-sm">
+                            <label for="showType">显示类型</label><span style="color:#FF3333;font-size:18px">*</span>
+                            <select class="form-control select-inline select2" name="showType" id="showType" required th:data-showtype="${formField['show_type']}">
+                                <script th:inline="javascript">
+                                    var fieldTypesArr = [[${fieldTypes}]];
+                                </script>
+                            </select>
+                        </div>
+
+                        <div class="form-group form-group-sm">
+                            <label for="fieldType">字段类型</label><span style="color:#FF3333;font-size:18px">*</span>
+                            <select class="form-control select-inline select2" name="fieldType" id="fieldType" required th:data-fieldtype="${formField['field_type']}">
+                            </select>
+                        </div>
+
                         <!--<div class="form-group form-group-sm">-->
                             <!--<label>展示类型</label>-->
                             <!--<select class="form-control" name="showType" id="showType" th:value="*{showType}">-->
