--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/menu/tabulation.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/system/menu/tabulation.html
@@ -47,9 +47,9 @@
                 <div class="modal-body">
                     <form class="form-horizontal" id="menu-form">
                         <div class="form-group">
-                            <label for="menu-title" class="col-sm-2 control-label"><span style="color:#FF3333;font-size:18px">*</span>名称</label>
+                            <label for="menu-name" class="col-sm-2 control-label"><span style="color:#FF3333;font-size:18px">*</span>名称</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="menu-title" placeholder="请输入名称">
+                                <input type="text" class="form-control" id="menu-name" placeholder="请输入名称">
                             </div>
                         </div>
                         <div class="form-group">
@@ -59,25 +59,25 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="menu-sort" class="col-sm-2 control-label">图标</label>
+                            <label for="menu-num" class="col-sm-2 control-label">图标</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" id="menu-icon" placeholder="请输入图标">
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="menu-sort" class="col-sm-2 control-label"><span style="color:#FF3333;font-size:18px">*</span>排序</label>
+                            <label for="menu-num" class="col-sm-2 control-label"><span style="color:#FF3333;font-size:18px">*</span>排序</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="menu-sort" placeholder="请输入排序（数字）">
+                                <input type="text" class="form-control" id="menu-num" placeholder="请输入排序（数字）">
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label for="menu-openway" class="col-sm-2 control-label">打开方式</label>
-                            <div class="col-sm-10">
-                                <select id="menu-openway" class="form-control">
+                        <!--<div class="form-group">-->
+                            <!--<label for="menu-openway" class="col-sm-2 control-label">打开方式</label>-->
+                            <!--<div class="col-sm-10">-->
+                                <!--<select id="menu-openway" class="form-control">-->
 
-                                </select>
-                            </div>
-                        </div>
+                                <!--</select>-->
+                            <!--</div>-->
+                        <!--</div>-->
                         <div class="form-group">
                             <label for="menu-description" class="col-sm-2 control-label">描述</label>
                             <div class="col-sm-10">
