--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/index.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/index.html
@@ -99,7 +99,7 @@
                             <a class="waves-effect" href="javascript:void(0);" onclick="passwordModal(event)"><i class="icon-lock"></i> 修改密码</a>
                         </li>
                         <li>
-                            <a class="waves-effect" href="/login"><i class="icon-circle-arrow-right"></i> 退出登录</a>
+                            <a class="waves-effect" href="/admin/login"><i class="icon-circle-arrow-right"></i> 退出登录</a>
                         </li>
                     </ul>
                 </div>
