--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/index.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
                 </div>
             </li>
             <li id="logo" class="hidden-xs">
-                <span id="system_title" class="logo-fontSize">粤企服</span>
+                <span id="system_title" class="logo-fontSize">帅哥</span>
             </li>
             <li class="pull-right">
                 <a class="waves-effect waves-light" style="color: #fff;" onclick="fullPage(event)" href="javascript:void(0);"><i class="icon-fullscreen"> 全屏</i></a>
@@ -121,8 +121,8 @@
             </div>
             <div class="content_main">
                 <div id="iframe_home" class="iframe active">
-                    <p></p><h4>粤企服</h4><p></p>
-                    <p><b>系统简介</b>：本系统基于配置平台，粤企服的数据展示</p><br>
+                    <p></p><h4>帅哥</h4><p></p>
+                    <p><b>系统简介</b>：本系统基于配置平台，帅哥的数据展示</p><br>
                     <p></p><h4>系统功能概述：</h4><p></p>
                     <p><b>表单管理</b>：表单设计</p>
                     <p><b>用户管理</b>：用户管理、角色管理、权限管理。</p><br>
