--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/login.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/login.html
@@ -22,7 +22,7 @@
 <div class="login-app x-block">
     <div class="login-bg blur"></div>
     <div class="login-container" id="login-frame">
-        <div class="login-title">测试</div>
+        <div class="login-title">帅哥</div>
         <div id="darkbannerwrap"></div>
         <form class="form" role="form">
             <div class="form-group has-feedback" style="margin-bottom: 20px;">
