菜单按钮+角色列表+角色树拖拽

--- a/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/index.html
+++ b/tradingplatform-admin/tradingplatform-admin-controller/src/main/resources/templates/index.html
@@ -127,7 +127,7 @@
                     <p><b>表单管理</b>：表单设计</p>
                     <p><b>用户管理</b>：用户管理、角色管理、权限管理。</p><br>
                     <p></p><h4>关于软件：</h4><p></p>
-                    <p><b>技术支持</b>：佛山市品智信息科技有限公司</p>
+                    <p><b>技术支持</b>：不知道先写什么好有限公司</p>
                     <p><b>系统要求</b>：现代主流浏览器、ie8+，推荐使用谷歌浏览器、火狐浏览器。若使用的是国产浏览器，请使用极速模式。</a></p>
                 </div>
             </div>
