--- a/tradingplatform-generator/src/main/resources/template/controller.java.vm
+++ b/tradingplatform-generator/src/main/resources/template/controller.java.vm
@@ -1,10 +1,11 @@
 ##package ${package.Controller};
 package com.secondhand.tradingplat${table.entityPath}admincontroller.controller;
 
-import com.secondhand.tradingplatformadminentity.entity.admin.shiro.Button;
+##import com.secondhand.tradingplatformadminentity.entity.admin.shiro.Button;
 ##import com.secondhand.tradingplatformadminservice.service.admin.shiro.MenuButtonService;
-##import com.mpdemo.util.jsonResult;
-##import com.mpdemo.util.TableJson;
+import com.baomidou.mybatisplus.plugins.Page;
+import com.secondhand.tradingplatformcommon.jsonResult.JsonResult;
+import com.secondhand.tradingplatformcommon.jsonResult.TableJson;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
@@ -24,14 +25,18 @@ import ${superControllerClassPackage};
 import com.secondhand.tradingplatformadminentity.entity.${entity};
 import com.secondhand.tradingplatformadminservice.service.${entity}Service;
 
+##import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
 /**
  * @description : ${entity} 控制器
  * @author : ${author}
  * @since : Create in ${date}
  */
-@Controller
-@Api(value="/admin#if(${package.ModuleName})/${package.ModuleName}#end/#if(${controllerMappingHyphenStyle})${controllerMappingHyphen}#else${table.entityPath}#end", description="${entity} 控制器")
-@RequestMapping("/admin#if(${package.ModuleName})/${package.ModuleName}#end/#if(${controllerMappingHyphenStyle})${controllerMappingHyphen}#else${table.entityPath}#end")
+@Controller("front${entity}Controller")
+@Api(value="/front#if(${package.ModuleName})/${package.ModuleName}#end/#if(${controllerMappingHyphenStyle})${controllerMappingHyphen}#else${table.entityPath}#end", description="${entity} 控制器")
+@RequestMapping("/front#if(${package.ModuleName})/${package.ModuleName}#end/#if(${controllerMappingHyphenStyle})${controllerMappingHyphen}#else${table.entityPath}#end")
 #if(${superControllerClass})
 public class ${table.controllerName} extends ${superControllerClass} {
 #else
@@ -63,7 +68,7 @@ public class ${table.controllerName} {
         return "system/${table.entityPath}/tabulation";
     }*#
 
-    /**
+#*    /**
      * @description : 跳转到修改或新增${table.entityPath}的页面
      * @author : ${author}
      * @since : Create in ${date}
@@ -81,7 +86,7 @@ public class ${table.controllerName} {
         //静态注入根据${table.entityPath}Id查找记录回显的数据
         model.addAttribute("${table.entityPath}", ${table.entityPath});
         return "system/${table.entityPath}/modify";
-    }
+    }*#
     
     /**
      * @description : 获取分页列表
@@ -120,6 +125,7 @@ public class ${table.controllerName} {
     public JsonResult<Map<String, Object>> get${entity}ByIdForMap( @ApiParam(name = "id", value = "${table.entityPath}Id") @PathVariable("${table.entityPath}Id") Long ${table.entityPath}Id){
             JsonResult<Map<String, Object>> resJson = new JsonResult<>();
             Map<String, Object> ${table.entityPath} = ${table.entityPath}Service.mySelectMapById(${table.entityPath}Id);
+            resJson.setCode(MagicalValue.CODE_OF_SUCCESS);
             resJson.setData(${table.entityPath});
             resJson.setSuccess(true);
             return resJson;
@@ -138,10 +144,12 @@ public class ${table.controllerName} {
             JsonResult<${entity}> resJson = new JsonResult<>();
             try{
                 //检查是否具有权限
-                subject.checkPermission("/admin/${table.entityPath}/delete");
+                subject.checkPermission("/front/${table.entityPath}/delete");
                 ${table.entityPath}Service.myFakeDeleteById(${table.entityPath}Id);
+                resJson.setCode(MagicalValue.CODE_OF_SUCCESS);
                 resJson.setSuccess(true);
             }catch (UnauthorizedException e){
+                resJson.setCode(MagicalValue.CODE_OF_CUSTOMIZE_EXCEPTION);
                 resJson.setSuccess(false);
                 resJson.setMessage(e.getMessage());
             }
@@ -161,9 +169,11 @@ public class ${table.controllerName} {
             JsonResult<${entity}> resJson = new JsonResult<>();
             try{
                 //检查是否具有权限
-                subject.checkPermission("/admin/${table.entityPath}/batch_delete");
+                subject.checkPermission("/front/${table.entityPath}/batch_delete");
                 resJson.setSuccess(${table.entityPath}Service.myFakeBatchDelete(${table.entityPath}Ids));
+                resJson.setCode(MagicalValue.CODE_OF_SUCCESS);
             }catch(UnauthorizedException e){
+                resJson.setCode(MagicalValue.CODE_OF_CUSTOMIZE_EXCEPTION);
                 resJson.setSuccess(false);
                 resJson.setMessage(e.getMessage());
             }
@@ -183,11 +193,13 @@ public class ${table.controllerName} {
             JsonResult<${entity}> resJson = new JsonResult<>();
             try{
                 //检查是否具有权限
-                subject.checkPermission("/admin/${table.entityPath}/create_update");
+                subject.checkPermission("/front/${table.entityPath}/create_update");
                 ${table.entityPath} = ${table.entityPath}Service.my${entity}CreateUpdate(${table.entityPath});
+                resJson.setCode(MagicalValue.CODE_OF_SUCCESS);
                 resJson.setData(${table.entityPath});
                 resJson.setSuccess(true);
             }catch(UnauthorizedException e){
+                resJson.setCode(MagicalValue.CODE_OF_UNAUTHORIZED_EXCEPTION);
                 resJson.setSuccess(false);
                 resJson.setMessage(e.getMessage());
             }
